# math-olympiad-ml

./: .gitignore  Makefile  Prompt-HSC-Complex-Numbers.md  Prompt-HSC-Induction.md  Prompt-HSC-Inequalities.md  Prompt-HSC-Integrals.md  Prompt-HSC-Mechanics.md  Prompt-HSC-Polynomials.md  Prompt-HSC-Proofs.md  Prompt-HSC-Vectors.md  README.md
Apery-Proof/: Makefile  Proof-Euler-Missed.tex
DroneShow/: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  Prompt-DroneShow.md  README.md  drone_show.py  requirements.txt
HSC-Collections/: .gitignore  HSC-Collections.tex  LICENSE.md  Makefile  README.md  build.bat  build.ps1
HSC-Combinatorics/: .gitignore  HSC-Combinatorics.tex  LICENSE.md  Makefile  README.md
HSC-Common/: Makefile  README.md  contact.md
HSC-ComplexNumbers/: .gitignore  HSC-ComplexNumbers.tex  LICENSE.md  Makefile  README.md  styles
HSC-Distribution/: LICENSE.md  (+3 more)
rubiks_group_theory/: .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  rubiks_2d_group_solver.py
rubiks_group_theory/.github/workflows/: ci.yml
rubiks_group_theory/core/: __init__.py  cube_state.py  move_metrics.py  permutations.py  profile_presets.py  queue_controls.py
rubiks_group_theory/docs/: FUTURE_ENHANCEMENTS.md  USAGE.md  algorithms.md
rubiks_group_theory/solvers/: __init__.py  basic_algo.py  two_phase_solver.py
rubiks_group_theory/tests/: test_move_metrics.py  test_permutations.py  test_profile_presets.py  test_queue_controls.py  test_solver_correctness.py
rubiks_group_theory/visualization/: __init__.py  cube_3d_renderer.py  flat_renderer.py  graph_renderer.py
(+1057 files in other folders)
