[project]
name = "rubiks-group-theory-solver"
version = "0.1.0"
description = "Rubik's Cube 2D Group Theory Solver with Pygame visualization"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "visualization", "solvers"]
